html/css works in progress

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -11,55 +11,70 @@
 		<link rel="stylesheet" href="/bower_components/owl.carousel/dist/assets/owl.carousel.min.css" />
 	</head>
 	<body>
-		<div id="svg_inline">
-	
-		</div>
-		<!--Milestone_1_Hero-->
-		<header class="header">
-			<nav class="header-menu-wrapper">
-				<ul class="header-menu">
-					<li class="menu__item"><a class="menu__link" href="#">О НАС</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">ХОЧУ СОБАКУ</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">ХОЧУ ПОМОЧЬ</a></li>
-				</ul>
-			</nav>
-		</header>
+		<section class="socials-content">
+			<div class="socials-content__wrapper">
+				<a class="social-links" href="https://vk.com/id340798666">
+					<div class="vk-icon social-icons">
+						<img src="icons/vkontakte.png" alt="Логотип Vkontakte" width="50" height="50" class="social-icon"/>
+					</div>
+				</a>
+				<a class="social-links" href="https://www.instagram.com/cozydoghouse/">
+					<div class="insta-icon social-icons">
+						<img src="icons/instagram.png" alt="Логотип Instagram" width="50" height="50" class="social-icon"/>
+					</div>
+				</a>
+				<a class="social-links" href="https://www.tiktok.com/@galinaaliyeva18">
+					<div class="tiktok-icon social-icons">
+						<img src="icons/tik-tok.png" alt="Логотип TikTok" width="50" height="50" class="social-icon"/>
+					</div>
+				</a>
+			</div>
+		</section>
 		<section class="g-content g-content-hero">	
 			<div class="hero-wrapper">
 				<div class="hero-titles">
 					<h1 class="hero__main-title">УЮТНЫЙ <br> ДОМИК <br> ГАЛИНЫ</h1>
-					<h2 class="hero__second-title">частный некоммерческий проект помощи бездомным животным</h2>
+					<h2 class="hero__second-title">частный некоммерческий проект помощи <br> бездомным животным</h2>
 				</div>
 				<div class="hero-picture">
 					<img class="hero-picture__img" src="img/galina.webp" alt="Галина и пёс">
 				</div>
 			</div>
 		</section>
-		<!--Milestone_2_About-->
 		<section class="g-content g-content-about">
 			<h2 class="about__title">Проще говоря,</h2>
 			<div class="about-content-wrapper">
 				<div class="about-step stepOne">
+					<div class="icon-wrapper">
+						<img src="icons/dog.png" alt="Иконка с собакой" width="50" height="50" class="pet-icon"/>
+					</div>
 					<p class="about-step__text">Галина уже много лет занимается волонтёрством - она находит брошенных, покалеченных или больных собак.</p>
 				</div>
 				<div class="about-step stepTwo">
-					<p class="about-step__text">Выхаживает, лечит, ставит прививки и стерилизует всех своих подопечных.  </p>
+					<div class="icon-wrapper">
+						<img src="icons/animal-care.png" alt="Иконка с собакой" width="50" height="50" class="pet-icon"/>
+					</div>
+					<p class="about-step__text">Выхаживает, лечит, ставит прививки и обязательно стерилизует всех своих подопечных.  </p>
 				</div>
 				<div class="about-step stepThree">
-					<p class="about-step__text">Ухаживает за животными до полного выздоровления.</p>
+					<div class="icon-wrapper">
+						<img src="icons/animal.png" alt="Иконка с собакой" width="50" height="50" class="pet-icon"/>
+					</div>
+					<p class="about-step__text"> А затем подыскивает каждому новую семью. Буквально дает второй шанс тем, кого бросили.</p>
 				</div>
 				<div class="about-step stepFour">
-					<p class="about-step__text"> А затем подыскивает каждому новую семью. Буквально дает второй шанс животным, которых однажды уже бросили.</p>
+					<div class="icon-wrapper">
+						<img src="icons/info.png" alt="Иконка с собакой" width="50" height="50" class="pet-icon"/>
+					</div>
+					<p class="about-step__text"> Обо всех своих действиях Галина подробно рассказывает в соцсетях.  </p>
 				</div>
 			</div>
 		</section>
-		<!--Milestone_3_SmallStat-->
 		<section class=" g-content-smallStat">
 			<div class="smallStat-wrapper">
 				<p class="smallStat-text">Благодаря работе Уютного домика более N собак уже нашли свою семью</p>
 			</div>
 		</section>
-		<!--Milestone_4_Slider-->
 		<section class="g-content g-content-slider">
 			<div class="slider-wrapper">
 				<div class="owl-carousel">
@@ -81,50 +96,46 @@
 					<div>
 						<img class="slider-img" src="img/slider/g6.webp" alt="Коричнево-белый красавчик (пёс)">
 					</div>
+					<div>
+						<img class="slider-img" src="img/slider/g7.jpg" alt="Коричнево-белый красавчик (пёс)">
+					</div>
+					<div>
+						<img class="slider-img" src="img/slider/g8.jpg" alt="Коричнево-белый красавчик (пёс)">
+					</div>
+					<div>
+						<img class="slider-img" src="img/slider/g9.jpg" alt="Коричнево-белый красавчик (пёс)">
+					</div>
+					<div>
+						<img class="slider-img" src="img/slider/g10.jpg" alt="Коричнево-белый красавчик (пёс)">
+					</div>
 				</div>
 			</div>
 		</section>
-		<!--Milestone_5_Help-->
 		<section class="g-content g-content-help">
-			<h2 class="help__main-title">Помочь может каждый</h2>
+			<h2 class="help__main-title">Важна любая помощь</h2>
+			<p class="help__sub-title">Уютный домик существует только благодаря помощи неравнодушных и энтузиазму Галины.</p>
 			<div class="help-content-wrapper">
-				<div class="help-money">
+				<div class="help-block help-money">
 					<h4 class="help__small-title">Деньгами</h4>
-					<p class="help__subtitle-info">Деньги это универсальный помощник, позволяющий обеспечить подопечных всем необходимым. Они нужны всегда, нажмите сюда, если готовы пожертвовать свои гроши</p>
+					<p class="help__subtitle-info">Уютный домик рад любым пожертвованиям.</p>
+					<p class="help__money">Помочь деньгами</p>
 					<div class="help-money-content-wrapper"></div>
 				</div>
-				<div class="help-supply">
+				<div class="help-block help-supply">
 					<h4 class="help__small-title">Расходными материалами</h4>
-					<p class="help__subtitle-info">Уютный домик регулярно пополняется новыми хвостиками, им нужны корм, лекарства, прививки...</p>
+					<p class="help__subtitle-info">Вы можете привезти или отправить корм, медикаменты, строительные материалы для вольеров (даже бывшие в употреблении)</p>
+					<p class="help__money">Помочь материалами</p>
 					<div class="help-supply-content-wrapper"></div>
 				</div>
-				<div class="help-speak">
+				<div class="help-block help-speak">
 					<h4 class="help__small-title">Оглаской в соцсетях</h4>
 					<p class="help__subtitle-info">Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!</p>
 					<div class="help-supply-content-wrapper"></div>
 				</div>
 			</div>
 		</section>
-		<!--Milestone_6_Footer-->
-		<section class="g-content g-content-footer">
-			<h2 class="help__main-title">Больше актуальной информации:</h2>
-			<div class="footer-icons-wrapper">
-				<div class="vk-icon-wrapper">
-					<div class="svg-vk-icon">
-						<svg class="svg-vk-icon"><use xlink:href="#svg-vk-icon"></use></svg>
-					</div>
-				</div>
-				<div class="inst-icon-wrapper">
-					<div class="svg-inst-icon">
-						<svg class="svg-inst__icon"><use xlink:href="#svg-inst-icon"></use></svg>
-					</div>
-				</div>
-				<div class="tt-icon-wrapper">
-					<div class="svg-tt-icon">
-						<svg class="svg-tt__icon"><use xlink:href="#svg-tt-icon"></use></svg>
-					</div>
-				</div>
-			</div>
+		<section class="g-content-footer">
+			<h2 class="footer__main-title">Больше актуальной информации в соцсетях</h2>
 		</section>
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
