layout in progress

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -66,7 +66,9 @@
 					<div class="icon-wrapper">
 						<img src="icons/info.png" alt="Иконка с собакой" width="50" height="50" class="pet-icon"/>
 					</div>
-					<p class="about-step__text"> Обо всех своих действиях Галина подробно рассказывает в соцсетях.  </p>
+					<p class="about-step__text"> Обо всех своих действиях Галина подробно рассказывает в соцсетях.<br>
+						О Галине также снимали репортажи <a href="https://otr-online.ru/programmy/activnaya/prodala-vse-cennoe-chtoby-otkryt-priyut-dlya-sobak-zhitelnica-temryuka-pochti-god-ne-mozhet-poluchit-zemlyu-pod-stroitelstvo-51706.html">ОРТ</a>
+						и <a href="https://vk.com/video-112510789_456257919">МЭШ</a></p>
 				</div>
 			</div>
 		</section>
@@ -117,25 +119,33 @@
 			<div class="help-content-wrapper">
 				<div class="help-block help-money">
 					<h4 class="help__small-title">Деньгами</h4>
-					<p class="help__subtitle-info">Уютный домик рад любым пожертвованиям.</p>
-					<p class="help__money">Помочь деньгами</p>
-					<div class="help-money-content-wrapper"></div>
+					<p class="help__subtitle-info">Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям. <br>
+						Сбербанк - 5469 3001 2039 4371. PayPal dancegala@hotmail.com </p>
 				</div>
 				<div class="help-block help-supply">
 					<h4 class="help__small-title">Расходными материалами</h4>
-					<p class="help__subtitle-info">Вы можете привезти или отправить корм, медикаменты, строительные материалы для вольеров (даже бывшие в употреблении)</p>
-					<p class="help__money">Помочь материалами</p>
+					<p class="help__subtitle-info">Вы можете привезти лично, отправить или передать корм, медикаменты, средства для обработки об блох и клещей, строительные материалы для вольеров (даже бывшие в употреблении). Вы можете привезти лично, отправить или передать корм, медикаменты, средства для обработки об блох и клещей, строительные материалы для вольеров (даже бывшие в употреблении)</p>
+					<p class="help__supply">Помочь материалами</p>
 					<div class="help-supply-content-wrapper"></div>
 				</div>
 				<div class="help-block help-speak">
 					<h4 class="help__small-title">Оглаской в соцсетях</h4>
-					<p class="help__subtitle-info">Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!</p>
+					<p class="help__subtitle-info">Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!</p>
+					<p class="help__speak">Помочь оглаской</p>
 					<div class="help-supply-content-wrapper"></div>
 				</div>
 			</div>
 		</section>
 		<section class="g-content-footer">
-			<h2 class="footer__main-title">Больше актуальной информации в соцсетях</h2>
+			<h2 class="footer__main-title">Регулярные отчеты и больше актуальной информации в соцсетях</h2>
+			<div class="footer__greetings">
+				<h3 class="footer__greetings-title">Уютный Домик выражает благодарность за помощь и доверие</h3>
+				<ul class="footer__greetings-list">
+					<li>Аптеке КВЗС</li>
+					<li>Администрации Темрюкского района</li>
+				</ul>
+
+			</div>
 		</section>
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
