layout and structure changes

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -30,6 +30,27 @@
 				</a>
 			</div>
 		</section>
+		<section class="content-menu">
+			<div class="menu-wrapper">
+				<div class="menu-left">
+					<div class="menu-left-socials">
+						<ul class="menu-list menu-left-socials-list">
+							<a class="menu-social-links" href="https://vk.com/id340798666">ВК</a>
+							<a class="menu-social-links" href="https://www.instagram.com/cozydoghouse/">ИНСТ</a>
+							<a class="menu-social-links" href="https://www.tiktok.com/@galinaaliyeva18">ТИК-ТОК</a>
+						</ul>
+					</div>
+				</div>
+				<div class="menu-right">
+					<div class="menu-list menu-right-options">
+						<ul class="menu-right-options-list">
+							<a class="menu-social-links" href="#">ХОЧУ СОБАКУ</a>
+							<a class="menu-social-links" href="#">ХОЧУ ПОМОЧЬ</a>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="g-content g-content-hero">	
 			<div class="hero-wrapper">
 				<div class="hero-titles">
