--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -35,9 +35,10 @@
 				<div class="menu-left">
 					<div class="menu-left-socials">
 						<ul class="menu-list menu-left-socials-list">
-							<a class="menu-social-links" href="https://vk.com/id340798666">ВК</a>
+							<a class="menu-social-links" href="#">КОНТАКТЫ</a>
+							<!-- <a class="menu-social-links" href="https://vk.com/id340798666">ВК</a>
 							<a class="menu-social-links" href="https://www.instagram.com/cozydoghouse/">ИНСТ</a>
-							<a class="menu-social-links" href="https://www.tiktok.com/@galinaaliyeva18">ТИК-ТОК</a>
+							<a class="menu-social-links" href="https://www.tiktok.com/@galinaaliyeva18">ТИК-ТОК</a> -->
 						</ul>
 					</div>
 				</div>
@@ -136,7 +137,7 @@
 		</section>
 		<section class="g-content g-content-help">
 			<h2 class="help__main-title">Важна любая помощь</h2>
-			<p class="help__sub-title">Уютный домик существует только благодаря помощи неравнодушных и энтузиазму Галины.</p>
+			<p class="help__sub-title">Уютный домик существует только благодаря помощи неравнодушных и энтузиазму Галины</p>
 			<div class="help-content-wrapper">
 				<div class="help-block help-money">
 					<h4 class="help__small-title">Деньгами</h4>
@@ -144,7 +145,7 @@
 						Сбербанк - 5469 3001 2039 4371. PayPal dancegala@hotmail.com </p>
 				</div>
 				<div class="help-block help-supply">
-					<h4 class="help__small-title">Расходными материалами</h4>
+					<h4 class="help__small-title">Расходниками</h4>
 					<p class="help__subtitle-info">Вы можете привезти лично, отправить или передать корм, медикаменты, средства для обработки об блох и клещей, строительные материалы для вольеров (даже бывшие в употреблении). Вы можете привезти лично, отправить или передать корм, медикаменты, средства для обработки об блох и клещей, строительные материалы для вольеров (даже бывшие в употреблении)</p>
 					<p class="help__supply">Помочь материалами</p>
 					<div class="help-supply-content-wrapper"></div>
@@ -159,6 +160,7 @@
 		</section>
 		<section class="g-content-footer">
 			<h2 class="footer__main-title">Регулярные отчеты и больше актуальной информации в соцсетях</h2>
+			<div class="footer__separator"></div>
 			<div class="footer__greetings">
 				<h3 class="footer__greetings-title">Уютный Домик выражает благодарность за помощь и доверие</h3>
 				<ul class="footer__greetings-list">
