slider removed, animated hero picture added

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -7,8 +7,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&display=swap" rel="stylesheet"> 
-		<link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
-		<link rel="stylesheet" href="/bower_components/owl.carousel/dist/assets/owl.carousel.min.css" />
 	</head>
 	<body>
 		<section class="socials-content">
@@ -46,7 +44,7 @@
 					<div class="menu-list menu-right-options">
 						<ul class="menu-right-options-list">
 							<a class="menu-social-links" href="#">ХОЧУ СОБАКУ</a>
-							<a class="menu-social-links" href="#">ХОЧУ ПОМОЧЬ</a>
+							<a class="menu-social-links" href="#inner-help">ХОЧУ ПОМОЧЬ</a>
 						</ul>
 					</div>
 				</div>
@@ -59,7 +57,7 @@
 					<h2 class="hero__second-title">частный некоммерческий проект помощи <br> бездомным животным</h2>
 				</div>
 				<div class="hero-picture">
-					<img class="hero-picture__img" src="img/galina.webp" alt="Галина и пёс">
+					<img class="hero-picture__img" id="hero-pic__id" src="img/heroSlider/1.png" alt="Галина и пёс"> 
 				</div>
 			</div>
 		</section>
@@ -99,44 +97,10 @@
 				<p class="smallStat-text">Благодаря работе Уютного домика более N собак уже нашли свою семью</p>
 			</div>
 		</section>
-		<section class="g-content g-content-slider">
-			<div class="slider-wrapper">
-				<div class="owl-carousel">
-					<div>
-						<img class="slider-img" src="img/slider/g3.webp" alt="Собаки в вольере">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g1.webp" alt="Бездомный пёс">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g4.webp" alt="Галина целует собаку">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g2.webp" alt="Галина и две собаки на руках">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g5.webp" alt="Галина и серый лохматый пёс">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g6.webp" alt="Коричнево-белый красавчик (пёс)">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g7.jpg" alt="Коричнево-белый красавчик (пёс)">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g8.jpg" alt="Коричнево-белый красавчик (пёс)">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g9.jpg" alt="Коричнево-белый красавчик (пёс)">
-					</div>
-					<div>
-						<img class="slider-img" src="img/slider/g10.jpg" alt="Коричнево-белый красавчик (пёс)">
-					</div>
-				</div>
-			</div>
-		</section>
+		<a name="inner-help"></a>
 		<section class="g-content g-content-help">
 			<h2 class="help__main-title">Важна любая помощь</h2>
+
 			<p class="help__sub-title">Уютный домик существует только благодаря помощи неравнодушных и энтузиазму Галины</p>
 			<div class="help-content-wrapper">
 				<div class="help-block help-money">
@@ -170,8 +134,6 @@
 
 			</div>
 		</section>
-		<script src="/bower_components/jquery/dist/jquery.js"></script>
-		<script src="/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
 		<script src="../src/scripts/index.js"></script>
 	</body>
 </html>
