--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -9,7 +9,39 @@
 		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
-		<section class="socials-content">
+		<section id="modal" class="modal-contacts">
+			<div class="modal-contacts_wrapper">
+				<div id="close-btn_id" class="modal-contacts_close-btn">
+					<div class="close-btn_icon">
+						<img src="icons/close.png" alt="Иконка закрытия модального окна" width="50" height="50" class="close-icon"/>
+					</div>
+				</div>
+				<div class="modal-contacts_list">
+					<a class="social-links" href="https://vk.com/id340798666">
+						<div class="vk-icon social-icons">
+							<img src="icons/vkontakte.png" alt="Логотип Vkontakte" width="50" height="50" class="social-icon"/>
+						</div>
+					</a>
+					<a class="social-links" href="https://www.instagram.com/cozydoghouse/">
+						<div class="insta-icon social-icons">
+							<img src="icons/instagram.png" alt="Логотип Instagram" width="50" height="50" class="social-icon"/>
+						</div>
+					</a>
+					<a class="social-links" href="https://www.tiktok.com/@galinaaliyeva18">
+						<div class="tiktok-icon social-icons">
+							<img src="icons/tik-tok.png" alt="Логотип TikTok" width="50" height="50" class="social-icon"/>
+						</div>
+					</a>
+				</div>
+				<a class="contact-me" href="https://t.me/sdobnaya">
+					<p class="contact-me_title">По техническим и юридическим вопросам</p>
+					<!-- <div class="tiktok-icon social-icons">
+						<img src="icons/tik-tok.png" alt="Логотип TikTok" width="50" height="50" class="social-icon"/>
+					</div> -->
+				</a>
+			</div>
+		</section>
+		<!-- <section class="socials-content">
 			<div class="socials-content__wrapper">
 				<a class="social-links" href="https://vk.com/id340798666">
 					<div class="vk-icon social-icons">
@@ -27,17 +59,17 @@
 					</div>
 				</a>
 			</div>
-		</section>
+		</section> -->
 		<section class="content-menu">
 			<div class="menu-wrapper">
 				<div class="menu-left">
 					<div class="menu-left-socials">
-						<ul class="menu-list menu-left-socials-list">
-							<a class="menu-social-links" href="#">КОНТАКТЫ</a>
+						<!--<ul class="menu-list menu-left-socials-list">-->
+							<a id="contacts_id" class="menu-social-links" href="#">КОНТАКТЫ</a>
 							<!-- <a class="menu-social-links" href="https://vk.com/id340798666">ВК</a>
 							<a class="menu-social-links" href="https://www.instagram.com/cozydoghouse/">ИНСТ</a>
 							<a class="menu-social-links" href="https://www.tiktok.com/@galinaaliyeva18">ТИК-ТОК</a> -->
-						</ul>
+						<!--</ul>-->
 					</div>
 				</div>
 				<div class="menu-right">
@@ -94,7 +126,7 @@
 		</section>
 		<section class=" g-content-smallStat">
 			<div class="smallStat-wrapper">
-				<p class="smallStat-text">Благодаря работе Уютного домика более N собак уже нашли свою семью</p>
+				<p class="smallStat-text">Благодаря работе Уютного домика было спасено более N собак</p>
 			</div>
 		</section>
 		<a name="inner-help"></a>
