--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -101,7 +101,7 @@
 		<section class="g-content g-content-help">
 			<h2 class="help__main-title">Важна любая помощь</h2>
 
-			<p class="help__sub-title">Уютный домик существует только благодаря помощи неравнодушных и энтузиазму Галины</p>
+			<p class="help__sub-title">Уютный домик существует только благодаря помощи не&shy;равно&shy;душ&shy;ных и энтузиазму Галины</p>
 			<div class="help-content-wrapper">
 				<div class="help-block help-money">
 					<h4 class="help__small-title">Деньгами</h4>
@@ -123,13 +123,13 @@
 			</div>
 		</section>
 		<section class="g-content-footer">
-			<h2 class="footer__main-title">Регулярные отчеты и больше актуальной информации в соцсетях</h2>
+			<h2 class="footer__main-title">Регулярные отчеты и больше актуальной информации в <span class="footer-social-link">соцсетях</span></h2>
 			<div class="footer__separator"></div>
 			<div class="footer__greetings">
-				<h3 class="footer__greetings-title">Уютный Домик выражает благодарность за помощь и доверие</h3>
+				<h3 class="footer__greetings-title">Уютный Домик выражает благодарность за помощь и доверие:</h3>
 				<ul class="footer__greetings-list">
-					<li>Аптеке КВЗС</li>
-					<li>Администрации Темрюкского района</li>
+					<li class="footer__greetings-list-item"><a href="https://yandex.ru/maps/org/krasnodarzoovetsnab/164582270906/reviews/?ll=37.368028%2C45.281802&z=17.2" style="color: #ffffff">Аптеке КВЗС</a></li>
+					<li class="footer__greetings-list-item">Администрации Темрюкского района</li>
 				</ul>
 
 			</div>
