adaptive done, needless stuff deleted

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -37,7 +37,7 @@
 			<div class="menu-wrapper">
 				<div class="menu-left">
 					<div class="menu-left-socials">
-							<a id="contacts_id" class="menu-social-links" href="#">КОНТАКТЫ</a>
+						<a id="contacts_id" class="menu-social-links" href="#">КОНТАКТЫ</a>
 					</div>
 				</div>
 				<div class="menu-right">
@@ -106,7 +106,7 @@
 				<div class="help-block help-money">
 					<h4 class="help__small-title">Деньгами</h4>
 					<p class="help__subtitle-info">Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям. <br>
-						Сбербанк - 5469 3001 2039 4371. PayPal dancegala@hotmail.com </p>
+						Сбербанк - 5469 3001 2039 4371. Яндекс кошелек 410013584097898. PayPal dancegala@hotmail.com </p>
 				</div>
 				<div class="help-block help-supply">
 					<h4 class="help__small-title">Расходниками</h4>
