--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -28,8 +28,8 @@
 						</div>
 					</a>
 				</div>
-				<a class="contact-me" href="https://t.me/sdobnaya">
-					<p class="contact-me_title">По техническим и юридическим вопросам</p>
+				<a style="color: #646464" class="contact-me" href="https://t.me/sdobnaya">
+					<p class="contact-me_title">По техническим или юридическим вопросам</p>
 				</a>
 			</div>
 		</section>
@@ -87,8 +87,8 @@
 						<img src="icons/info.png" alt="Иконка с собакой" width="50" height="50" class="pet-icon"/>
 					</div>
 					<p class="about-step__text"> Обо всех своих действиях Галина подробно рассказывает в соцсетях.<br>
-						О Галине также снимали репортажи <a href="https://otr-online.ru/programmy/activnaya/prodala-vse-cennoe-chtoby-otkryt-priyut-dlya-sobak-zhitelnica-temryuka-pochti-god-ne-mozhet-poluchit-zemlyu-pod-stroitelstvo-51706.html">ОРТ</a>
-						и <a href="https://vk.com/video-112510789_456257919">МЭШ</a></p>
+						О Галине также снимали репортажи <a class="about-links" style="color: #646464" href="https://otr-online.ru/programmy/activnaya/prodala-vse-cennoe-chtoby-otkryt-priyut-dlya-sobak-zhitelnica-temryuka-pochti-god-ne-mozhet-poluchit-zemlyu-pod-stroitelstvo-51706.html">ОРТ</a>
+						и <a class="about-links" style="color: #646464" href="https://vk.com/video-112510789_456257919">МЭШ</a></p>
 				</div>
 			</div>
 		</section>
@@ -105,30 +105,45 @@
 			<div class="help-content-wrapper">
 				<div class="help-block help-money">
 					<h4 class="help__small-title">Деньгами</h4>
-					<p class="help__subtitle-info">Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям.Уютный домик рад любым пожертвованиям. <br>
-						Сбербанк - 5469 3001 2039 4371. Яндекс кошелек 410013584097898. PayPal dancegala@hotmail.com </p>
+					<p class="help__subtitle-info">Самая универсальная помощь, которую можно превратить в корм, услуги ветеринарной клиники или необходимые расходники. 
+						Уютный домик рад переводам любых размеров, однако будучи волонтерской организацией, <b>не может принимать деньги от юридических лиц</b>, только от физических. 
+						Донаты небезразличных подписчиков годами поддерживают деятельность Уютного домика.</p>
+					<table class="help__table">
+						<tbody>
+							<tr>
+								<td>Сбербанк</td>
+								<td>5469 3001 2039 4371</td>
+							</tr>
+							<tr>
+								<td>Яндекс кошелёк</td>
+								<td>410013584097898</td>
+							</tr>
+							<tr>
+								<td>PayPal</td>
+								<td>dancegala@hotmail.com</td>
+							</tr>
+						</tbody>
+					</table>						
 				</div>
 				<div class="help-block help-supply">
 					<h4 class="help__small-title">Расходниками</h4>
-					<p class="help__subtitle-info">Вы можете привезти лично, отправить или передать корм, медикаменты, средства для обработки об блох и клещей, строительные материалы для вольеров (даже бывшие в употреблении). Вы можете привезти лично, отправить или передать корм, медикаменты, средства для обработки об блох и клещей, строительные материалы для вольеров (даже бывшие в употреблении)</p>
-					<p class="help__supply">Помочь материалами</p>
-					<div class="help-supply-content-wrapper"></div>
+					<p class="help__subtitle-info">Уютный домик рад помощи в любой удобной для вас форме. Мы с радостью примем в дар: <b>корм, средства обработки от блох и клещей, ветпрепараты, расходные медицинские материалы, утеплители и строительные материалы для вольеров (даже бывшие в употреблении).</b> Вы можете отправить посылку или привезти лично. Подробности уточняйте.</p>
+
 				</div>
 				<div class="help-block help-speak">
-					<h4 class="help__small-title">Оглаской в соцсетях</h4>
-					<p class="help__subtitle-info">Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!Уютный домик существуюет только благодаря небезразличным людям и их поддержке. Расскажите о нас!</p>
-					<p class="help__speak">Помочь оглаской</p>
-					<div class="help-supply-content-wrapper"></div>
+					<h4 class="help__small-title">Оглаской</h4>
+					<p class="help__subtitle-info">Уютный домик существует только благодаря небезразличным, их вниманию и поддержке. Чем больше людей о нас узнает, тем больше помощи мы получим, и тем больше собак вернутся домой. Расскажите о нас в своих соц.сетях, напишите блоггеру, снимите тикток. Любая помощь важна.</p>
 				</div>
 			</div>
+			<p class="help__subtitle-info help-warn">Во избежание мошенничества зеркальными копиями сайта, просим убедиться в личных данных получателя (все донаты принимаются только на имя Галины), либо сверить реквизиты с данными на странице Галины в <a style="color: #646464" class="help-warn_link" href="https://www.instagram.com/cozydoghouse/">инстаграмм.</a></p>
 		</section>
 		<section class="g-content-footer">
-			<h2 class="footer__main-title">Регулярные отчеты и больше актуальной информации в <span class="footer-social-link">соцсетях</span></h2>
+			<h2 class="footer__main-title">Регулярные отчеты и больше актуальной информации в <span id="footer-social-link_id" class="footer-social-link">соцсетях</span></h2>
 			<div class="footer__separator"></div>
 			<div class="footer__greetings">
 				<h3 class="footer__greetings-title">Уютный Домик выражает благодарность за помощь и доверие:</h3>
 				<ul class="footer__greetings-list">
-					<li class="footer__greetings-list-item"><a href="https://yandex.ru/maps/org/krasnodarzoovetsnab/164582270906/reviews/?ll=37.368028%2C45.281802&z=17.2" style="color: #ffffff">Аптеке КВЗС</a></li>
+					<li class="footer__greetings-list-item"><a id="footer__greetings-list-item_id" href="https://yandex.ru/maps/org/krasnodarzoovetsnab/164582270906/reviews/?ll=37.368028%2C45.281802&z=17.2" style="color: #ffffff">Аптеке КВЗС</a></li>
 					<li class="footer__greetings-list-item">Администрации Темрюкского района</li>
 				</ul>
 
@@ -137,3 +152,5 @@
 		<script src="../src/scripts/index.js"></script>
 	</body>
 </html>
+
+
