last improvements before deploy

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -17,9 +17,10 @@
 							<img src="icons/vkontakte.png" alt="Логотип Vkontakte" width="50" height="50" class="social-icon"/>
 						</div>
 					</a>
-					<a class="social-links" href="https://www.instagram.com/cozydoghouse/">
+					<!-- <a class="social-links" href="https://www.instagram.com/cozydoghouse/"></a> -->
+					<a class="social-links" href="https://t.me/Uyutnidomik">
 						<div class="insta-icon social-icons">
-							<img src="icons/instagram.png" alt="Логотип Instagram" width="50" height="50" class="social-icon"/>
+							<img src="icons/telegrama.png" alt="Логотип Telegram" width="50" height="50" class="social-icon"/>
 						</div>
 					</a>
 					<a class="social-links" href="https://www.tiktok.com/@galinaaliyeva18">
@@ -92,9 +93,9 @@
 				</div>
 			</div>
 		</section>
-		<section class=" g-content-smallStat">
+		<section class="g-content-smallStat">
 			<div class="smallStat-wrapper">
-				<p class="smallStat-text">Благодаря работе Уютного домика было спасено более N собак</p>
+				<p class="smallStat-text">Благодаря работе Уютного домика было спасено более <span id="dogQuantity_id">464</span> собак</p>
 			</div>
 		</section>
 		<a name="inner-help"></a>
@@ -112,15 +113,11 @@
 						<tbody>
 							<tr>
 								<td>Сбербанк</td>
-								<td>5469 3001 2039 4371</td>
+								<td>2202 2016 4200 0075</td>
 							</tr>
 							<tr>
-								<td>Яндекс кошелёк</td>
+								<td>ЮMoney кошелёк</td>
 								<td>410013584097898</td>
-							</tr>
-							<tr>
-								<td>PayPal</td>
-								<td>dancegala@hotmail.com</td>
 							</tr>
 						</tbody>
 					</table>						
@@ -135,7 +132,7 @@
 					<p class="help__subtitle-info">Уютный домик существует только благодаря небезразличным, их вниманию и поддержке. Чем больше людей о нас узнает, тем больше помощи мы получим, и тем больше собак вернутся домой. Расскажите о нас в своих соц.сетях, напишите блоггеру, снимите тикток. Любая помощь важна.</p>
 				</div>
 			</div>
-			<p class="help__subtitle-info help-warn">Во избежание мошенничества зеркальными копиями сайта, просим убедиться в личных данных получателя (все донаты принимаются только на имя Галины), либо сверить реквизиты с данными на странице Галины в <a style="color: #646464" class="help-warn_link" href="https://www.instagram.com/cozydoghouse/">инстаграмм.</a></p>
+			<p class="help__subtitle-info help-warn">Во избежание мошенничества зеркальными копиями сайта, просим убедиться в личных данных получателя (все донаты принимаются только на имя Галины), либо сверить реквизиты с данными на странице Галины в <a style="color: #646464" class="help-warn_link" href="https://t.me/Uyutnidomik">телеграме.</a></p>
 		</section>
 		<section class="g-content-footer">
 			<h2 class="footer__main-title">Регулярные отчеты и больше актуальной информации в <span id="footer-social-link_id" class="footer-social-link">соцсетях</span></h2>
