fix hero img and stats

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -58,7 +58,7 @@
 					<h2 class="hero__second-title">частный некоммерческий проект помощи <br> бездомным животным</h2>
 				</div>
 				<div class="hero-picture">
-					<img class="hero-picture__img" id="hero-pic__id" src="img/heroSlider/1.png" alt="Галина и пёс"> 
+					<img class="hero-picture__img" id="hero-pic__id" src="img/newSlider/1.png" alt="Галина и пёс"> 
 				</div>
 			</div>
 		</section>
@@ -95,7 +95,7 @@
 		</section>
 		<section class="g-content-smallStat">
 			<div class="smallStat-wrapper">
-				<p class="smallStat-text">Благодаря работе Уютного домика было спасено более <span id="dogQuantity_id">464</span> собак</p>
+				<p class="smallStat-text">Благодаря работе Уютного домика было спасено более <span id="dogQuantity_id">700</span> собак</p>
 			</div>
 		</section>
 		<a name="inner-help"></a>
