add one more social-link and fix adaptive layout for it

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -12,12 +12,16 @@
 		<section id="modal" class="modal-contacts">
 			<div id="modal-wrapper" class="modal-contacts_wrapper">
 				<div class="modal-contacts_list">
+					<a class="social-links" href="">
+						<div class="insta-icon social-icons">
+							<img src="icons/odnoklass.png" alt="Логотип Одноклассники" width="50" height="50" class="social-icon"/>
+						</div>
+					</a>
 					<a class="social-links" href="https://vk.com/id340798666">
 						<div class="vk-icon social-icons">
 							<img src="icons/vkontakte.png" alt="Логотип Vkontakte" width="50" height="50" class="social-icon"/>
 						</div>
 					</a>
-					<!-- <a class="social-links" href="https://www.instagram.com/cozydoghouse/"></a> -->
 					<a class="social-links" href="https://t.me/Uyutnidomik">
 						<div class="insta-icon social-icons">
 							<img src="icons/telegrama.png" alt="Логотип Telegram" width="50" height="50" class="social-icon"/>
@@ -29,9 +33,6 @@
 						</div>
 					</a>
 				</div>
-				<a style="color: #646464" class="contact-me" href="https://t.me/sdobnaya">
-					<p class="contact-me_title">По техническим или юридическим вопросам</p>
-				</a>
 			</div>
 		</section>
 		<section class="content-menu">
