fix payments layout 1/2

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -133,6 +133,10 @@
 					<p class="help__subtitle-info">Уютный домик существует только благодаря небезразличным, их вниманию и поддержке. Чем больше людей о нас узнает, тем больше помощи мы получим, и тем больше собак вернутся домой. Расскажите о нас в своих соц.сетях, напишите блоггеру, снимите тикток. Любая помощь важна.</p>
 				</div>
 			</div>
+			<div class="help__payment-data">
+				<span class="payment-data payment-data__sber">2202 2016 4200 0075</span><br>
+				<span class="payment-data payment-data__u-money">410013584097898</span>
+			</div>
 			<p class="help__subtitle-info help-warn">Во избежание мошенничества зеркальными копиями сайта, просим убедиться в личных данных получателя (все донаты принимаются только на имя Галины), либо сверить реквизиты с данными на странице Галины в <a style="color: #646464" class="help-warn_link" href="https://t.me/Uyutnidomik">телеграме.</a></p>
 		</section>
 		<section class="g-content-footer">
