fix payment layout 2/2, add favicon, do minor layout fix

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -7,12 +7,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&display=swap" rel="stylesheet"> 
+		<link rel="icon" href="pata.png">
+		<link rel="manifest" href="manifest.webmanifest">
 	</head>
 	<body>
 		<section id="modal" class="modal-contacts">
 			<div id="modal-wrapper" class="modal-contacts_wrapper">
 				<div class="modal-contacts_list">
-					<a class="social-links" href="">
+					<a class="social-links" href="https://ok.ru/group53274210926675">
 						<div class="insta-icon social-icons">
 							<img src="icons/odnoklass.png" alt="Логотип Одноклассники" width="50" height="50" class="social-icon"/>
 						</div>
@@ -45,7 +47,7 @@
 				<div class="menu-right">
 					<div class="menu-list menu-right-options">
 						<ul class="menu-right-options-list">
-							<a class="menu-social-links" href="#">ХОЧУ СОБАКУ</a>
+							<a class="menu-social-links" href="#">О СОБАКАХ</a>
 							<a class="menu-social-links" href="#inner-help">ХОЧУ ПОМОЧЬ</a>
 						</ul>
 					</div>
@@ -110,18 +112,11 @@
 					<p class="help__subtitle-info">Самая универсальная помощь, которую можно превратить в корм, услуги ветеринарной клиники или необходимые расходники. 
 						Уютный домик рад переводам любых размеров, однако будучи волонтерской организацией, <b>не может принимать деньги от юридических лиц</b>, только от физических. 
 						Донаты небезразличных подписчиков годами поддерживают деятельность Уютного домика.</p>
-					<table class="help__table">
-						<tbody>
-							<tr>
-								<td>Сбербанк</td>
-								<td>2202 2016 4200 0075</td>
-							</tr>
-							<tr>
-								<td>ЮMoney кошелёк</td>
-								<td>410013584097898</td>
-							</tr>
-						</tbody>
-					</table>						
+					<div class="help-money__payment-data payment-data__wrapper help__payment-data">
+						<span class="help-money__payment-data money__payment-sber payment-data payment-data__sber">2202 2016 4200 0075</span>
+						<span class="help-money__payment-data money__payment-umoney payment-data payment-data__u-money">410013584097898</span>
+					</div>
+					<p class="help-money__payment-data help__subtitle-info help-warn">Во избежание мошенничества зеркальными копиями сайта, просим убедиться в личных данных получателя (все донаты принимаются только на имя Галины), либо сверить реквизиты с данными на странице Галины в <a style="color: #646464" class="help-warn_link" href="https://t.me/Uyutnidomik">телеграме.</a></p>
 				</div>
 				<div class="help-block help-supply">
 					<h4 class="help__small-title">Расходниками</h4>
@@ -134,7 +129,7 @@
 				</div>
 			</div>
 			<div class="help__payment-data">
-				<span class="payment-data payment-data__sber">2202 2016 4200 0075</span><br>
+				<span class="payment-data payment-data__sber">2202 2016 4200 0075</span>
 				<span class="payment-data payment-data__u-money">410013584097898</span>
 			</div>
 			<p class="help__subtitle-info help-warn">Во избежание мошенничества зеркальными копиями сайта, просим убедиться в личных данных получателя (все донаты принимаются только на имя Галины), либо сверить реквизиты с данными на странице Галины в <a style="color: #646464" class="help-warn_link" href="https://t.me/Uyutnidomik">телеграме.</a></p>
