--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -5,6 +5,7 @@
 		<title>Уютный домик Галины</title>
 		<meta name="description" content="Уютный домик Галины">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0">
+		<meta name="format-detection" content="telephone=no">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&display=swap" rel="stylesheet"> 
 		<link rel="icon" href="pata.png">
